[gd_scene load_steps=3 format=3 uid="uid://bxcv9k8l7m6n5p"]

[ext_resource type="Script" path="res://src/scripts/testing/pause_menu_standalone.gd" id="1_standalone_script"]
[ext_resource type="PackedScene" path="res://src/scenes/ui/menus/pause_menu.tscn" id="2_pause_menu"]

[node name="PauseMenuStandalone" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_standalone_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.2, 0.4, 0.8, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Pause Menu Standalone Test"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 20)

[node name="InstructionLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Press ESC or P to open pause menu"
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 10)

[node name="StatusLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Status: Ready"
horizontal_alignment = 1

[node name="PauseMenu" parent="." instance=ExtResource("2_pause_menu")]